@@ -4,6 +4,9 @@ TODO
 * update man page
 * add more tests
 
+20141229
+* updated dpkg files
+
 20141205
 * worked on test scripts
 
